force-app/main/default/objects/CourseParent__c/CourseParent__c.object-meta.xml
<CustomObject>
    <label>Course Parent</label>
    <nameField>
        <label>Course Parent ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Parent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>