force-app/main/default/objects/CourseParent__c/fields/I_IL_Dom_Course_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Dom_Course_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTU360-2557: Depicts if this is a Domestic course</description>
    <label>Domestic Course Flag</label>
    <type>Checkbox</type>
</CustomField>