force-app/main/default/objects/CourseParent__c/fields/I_IL_Int_Offshore_Course_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Int_Offshore_Course_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTU360-2557: Depicts if this is an international offshore course</description>
    <label>International Offshore Course Flag</label>
    <type>Checkbox</type>
</CustomField>