force-app/main/default/objects/CourseParent__c/fields/I_IL_Int_Onshore_Course_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Int_Onshore_Course_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTU360-2557: Depicts if this is an international onshore course</description>
    <label>International Onshore Course Flag</label>
    <type>Checkbox</type>
</CustomField>