force-app/main/default/objects/CourseParent__c/fields/I_IL_Marketing_Discipline__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Marketing_Discipline__c</fullName>
    <description>LTU360-2557: This is the discipline on Find a course website</description>
    <label>Marketing Discipline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>