force-app/main/default/objects/CourseParent__c/fields/I_ST_Advertised_Title__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Advertised_Title__c</fullName>
    <label>Advertised Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>