force-app/main/default/objects/CourseParent__c/fields/I_ST_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>I_ST_ExternalId__c</fullName>
    <description>Concatenation of Course Parent Code, Course Parent Version Number and Course Parent Version Year</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>