force-app/main/default/objects/CourseParent__c/fields/I_ST_Flagship_Course__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Flagship_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flagship Course</label>
    <type>Checkbox</type>
</CustomField>