force-app/main/default/objects/CourseParent__c/fields/I_ST_Full_Time_Duration_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Full_Time_Duration_Unit_Of_Measure__c</fullName>
    <label>Full Time Duration Unit Of Measure</label>
    <length>64</length>
    <type>Text</type>
</CustomField>