force-app/main/default/objects/CourseParent__c/fields/I_ST_Full_Time_Duration_Value__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Full_Time_Duration_Value__c</fullName>
    <label>Full Time Duration</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>