force-app/main/default/objects/CourseParent__c/fields/I_ST_Study_Basis_Code__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Study_Basis_Code__c</fullName>
    <label>Study Basis Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>