force-app/main/default/objects/CourseParent__c/fields/I_ST_Study_Basis_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Study_Basis_Name__c</fullName>
    <label>Study Basis</label>
    <length>64</length>
    <type>Text</type>
</CustomField>