force-app/main/default/objects/CourseParent__c/fields/L_AD_Award_Title__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Award_Title__c</fullName>
    <description>Title of the course</description>
    <label>Award</label>
    <length>255</length>
    <type>Text</type>
</CustomField>