force-app/main/default/objects/CourseParent__c/fields/L_AD_Award_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Award_Type_Code__c</fullName>
    <description>Award Type Code</description>
    <label>Award Type Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>