force-app/main/default/objects/CourseParent__c/fields/L_AD_Course_Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Parent_Code__c</fullName>
    <externalId>true</externalId>
    <label>Course Parent Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>