force-app/main/default/objects/CourseParent__c/fields/L_AD_Course_Parent_Status__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Parent_Status__c</fullName>
    <description>Course Parent status</description>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>