force-app/main/default/objects/CourseParent__c/fields/L_AD_Course_Parent_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Parent_Version_Number__c</fullName>
    <description>Course Parent Version Number tracks the version</description>
    <label>Version</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>