force-app/main/default/objects/CourseParent__c/fields/L_AD_Course_Parent_Version_Year__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Parent_Version_Year__c</fullName>
    <description>Year in which course is offered.</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>