force-app/main/default/objects/CourseParent__c/fields/L_AD_Course_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Type_Code__c</fullName>
    <description>Course Type Code</description>
    <label>Course Type Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>