force-app/main/default/objects/CourseParent__c/fields/L_AD_Course_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Type_Name__c</fullName>
    <description>Course Type Name</description>
    <label>Course Type Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>