force-app/main/default/objects/CourseParent__c/fields/L_AD_Published_On_Find_A_Course__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Published_On_Find_A_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the COurse has been published on Find A Course</description>
    <label>Published On Find A Course</label>
    <type>Checkbox</type>
</CustomField>