force-app/main/default/objects/CourseParent__c/fields/L_AD_Published_on_UAC__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Published_on_UAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Course is published on UAC</description>
    <label>Published on UAC</label>
    <type>Checkbox</type>
</CustomField>