force-app/main/default/objects/CourseParent__c/fields/L_AD_Published_On_VTAC__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Published_On_VTAC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the course is published on VTAC</description>
    <label>Published On VTAC</label>
    <type>Checkbox</type>
</CustomField>