force-app/main/default/objects/CourseParent__c/fields/L_AD_Study_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Study_Level_Code__c</fullName>
    <label>Study Level Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>