force-app/main/default/objects/CourseParent__c/fields/L_AD_Study_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Study_Level_Name__c</fullName>
    <label>Study Level</label>
    <length>64</length>
    <type>Text</type>
</CustomField>