force-app/main/default/objects/CourseParent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_AD_Course_Parent_Code__c</columns>
    <columns>L_AD_Course_Parent_Version_Year__c</columns>
    <columns>L_AD_Course_Parent_Version_Number__c</columns>
    <columns>L_AD_Course_Parent_Status__c</columns>
    <columns>L_AD_Award_Title__c</columns>
    <columns>L_AD_Course_Type_Name__c</columns>
    <columns>L_AD_Withhold_From_Publication__c</columns>
    <columns>L_AD_Published_On_VTAC__c</columns>
    <columns>L_AD_Published_on_UAC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>