force-app/main/default/objects/CourseParent__c/listViews/All_Active_Courses_SACE.listView-meta.xml
<ListView>
    <fullName>All_Active_Courses_SACE</fullName>
    <columns>NAME</columns>
    <columns>L_AD_Award_Title__c</columns>
    <columns>L_AD_Course_Parent_Version_Year__c</columns>
    <columns>L_AD_Course_Parent_Version_Number__c</columns>
    <columns>L_AD_Study_Level_Name__c</columns>
    <columns>L_AD_Course_Type_Name__c</columns>
    <columns>L_AD_Course_Parent_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>L_AD_Course_Parent_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Courses (SACE)</label>
</ListView>