force-app/main/default/objects/CourseParent__c/listViews/I_ST_All_Course_Parent.listView-meta.xml
<ListView>
    <fullName>I_ST_All_Course_Parent</fullName>
    <columns>NAME</columns>
    <columns>L_AD_Award_Title__c</columns>
    <columns>L_AD_Course_Parent_Version_Year__c</columns>
    <columns>L_AD_Course_Parent_Version_Number__c</columns>
    <columns>L_AD_Study_Level_Name__c</columns>
    <columns>L_AD_Course_Type_Name__c</columns>
    <columns>L_AD_Course_Parent_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - SACE</label>
</ListView>